--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.port=8091
 
+spring.datasource.initialization-mode=EMBEDDED
+spring.h2.console.enabled=true
+
+spring.jpa.defer-datasource-initialization=true 
